# mpev

./: .gitignore  CMakeLists.txt  LICENSE  README.md
experiments/: CMakeLists.txt  ExperimentOne.h  ExperimentRunner.cpp  ExperimentRunner.h  ExperimentThree.h  ExperimentTwo.h  OnesInd.h  example.toml  main.cpp
include/: Context.h  Fitness.h  FitnessManager.h  GreaterThanGame.h  Individual.h  Population.h  PopulationSates.h  PopulationStates.h  Selectors.h  Stats.h
src/: CMakeLists.txt  Context.cpp  Fitness.cpp  GreaterThanGame.cpp  Individual.cpp  Population.cpp  PopulationStates.cpp  Selectors.cpp  Stats.cpp  main.cpp
tests/: CMakeLists.txt  basicTests.cpp  gtgTest.h
tools/: display.py  requirements.txt
